--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ img {
 
 .hero {
   width: 100%;
-  height: 100dvh;
+  height: 100%;
   position: relative;
   background-image: url("img/main.JPG");
   background-size: cover;
